--- a/javascript/javascript200.html
+++ b/javascript/javascript200.html
@@ -251,7 +251,7 @@
         <li><a href="javascript200.html">조건문</a></li>
         <li><a href="javascript200.html">반복문</a></li>
     </ol>
-    <ol>
+    <ol class="ol5">
         <li><a href="javascript400.html">알고리즘</a></li>
     </ol>
     <h2 class="mt20">제어문</h2>
