--- a/javascript/javascript400.html
+++ b/javascript/javascript400.html
@@ -261,7 +261,7 @@
         <li><a href="javascript200.html">조건문</a></li>
         <li><a href="javascript200.html">반복문</a></li>
     </ol>
-    <ol>
+    <ol class="ol5">
         <li><a href="javascript400.html">알고리즘</a></li>
     </ol>
 
