--- a/class/index.html
+++ b/class/index.html
@@ -79,7 +79,7 @@
     <div class="bs-header bgs1" id="content">
         <div class="container">
             <h1>Class v1.0 &lt;/doc&gt;</h1>
-            <p><a href="https://heoar.github.io/mybhar/" target="_blank">heoar.github.io/mybhar</a></p>
+            <p><a href="https://heoar.github.io/dothome21/" target="_blank">heoar.github.io/dothome21</a></p>
         </div>
     </div>
 
@@ -800,7 +800,7 @@
             <ul class="footer-links muted">
                 <li>Currently v2.0</li>
                 <li>&middot;</li>
-                <li><a href="https://heoar.github.io/mybhar/">HEOAR</a></li>
+                <li><a href="https://heoar.github.io/dothome21/">HEOAR</a></li>
                 <li>&middot;</li>
                 <li><a href="http://cafe.naver.com/crossbrowsing" target="_blank">publisher cafe</a></li>
                 <li>&middot;</li>
