--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="brand" href="https://heoar.github.io/mybhar/">HEOAR</a>
+                <a class="brand" href="https://heoar.github.io/dothome21/">HEOAR</a>
                 <div class="nav-collapse collapse pull-right">
                     <ul class="nav">
                         <li><a href="https://javab-png.tistory.com/">Tistory</a></li>
@@ -127,7 +127,7 @@
             <div class="row">
                 <div class="span12" style="text-align:center;">
                     <div class="header_tit">
-                        <a href="https://heoar.github.io/mybhar/"><img src="assets/img/main2.svg" alt="main"></a>
+                        <a href="https://heoar.github.io/dothome21/"><img src="assets/img/main2.svg" alt="main"></a>
                         <h1>Professional web publishers</h1>
                     </div>
                     <div class="header_icon">
@@ -270,7 +270,7 @@
             <div class="row">
                 <div class="span12">
                     <h5>
-                        <a href="https://heoar.github.io/mybhar/" target="_blank">HEOAR</a>
+                        <a href="https://heoar.github.io/dothome21/" target="_blank">HEOAR</a>
                         <span id="clock"></span>
                         <span id="infor"></span>
                     </h5>
