--- a/javascript/javascript602.html
+++ b/javascript/javascript602.html
@@ -692,6 +692,16 @@
                 </table>
             </div>
             <pre class="line-numbers"><code class="language-js">{
+    const str = "자바스크립트(javascript) 공부";
+    const text = str.charAt(4);
+
+    document.querySelector(".sample06_R1").innerHTML = text;
+
+
+    const str2 = "자바스크립트(javascript) 공부";
+    const text2 = str2.charAt();
+
+    document.querySelector(".sample06_R2").innerHTML = text2;
 }
 </code></pre>
         </div>
