--- a/javascript/javascript602-sample01.html
+++ b/javascript/javascript602-sample01.html
@@ -236,7 +236,6 @@
                     <li>counter-reset 속성은 콘텐츠의 숫자를 초기화합니다.</li>
                     <li>counter-set 속성은 카운터를 지정된 값으로 설정합니다.</li>
                     <li>cursor 속성은 마우스 오버시 마우스 포인터를 정의합니다.</li>
-                    <li>cursor 속성은 마우스 오버시 마우스 포인터를 정의합니다.</li>
                     <li>direction 속성은 문장의 방향을 설정합니다.</li>
                     <li>display 속성은 요소의 성질을 정의합니다.</li>
                     <li>empty-cells 속성은 테이블의 빈요소의 속성을 설정합니다.</li>
@@ -355,6 +354,18 @@
                     <li>perspective-origin 속성은 3D를 표현할 때 원근점의 방향을 정의합니다.</li>
                     <li>pointer-events 속성은 포인터 이벤트 반응을 정의합니다.</li>
                     <li>position 속성은 요소의 위치를 설정합니다.</li>
+                    <li>&lt;q&gt; 태그는 짧은 글을 인용할 때 사용합니다.</li>
+                    <li>&lt;rp&lt; 태그는 루비 태그가 지원되지 않을 경우 괄호('(')를 표현해주는 역할을 합니다.</li>
+                    <li>&lt;rt&gt; 태그는 상단에 작은 주석 글씨를 나타냅니다.</li>
+                    <li>&lt;rtc&gt; 태그는 텍스트 컨테이너 역할을 합니다.</li>
+                    <li>&lt;ruby&gt; 태그는 루비 문자를 정의합니다.</li>
+                    <li>&lt;s&gt; 요소는 텍스트에 취소선을 나타냅니다. .</li>
+                    <li>&lt;samp&gt; 태그는 컴퓨터 프로그램으로 출력된 결과물을 나타내는 텍스트를 표현합니다.</li>
+                    <li>&lt;script&gt; 태그는 실행 가능한 스크립트 코드를 포함하거나 외부 스크립트를 연결할 수 있습니다.</li>
+                    <li>&lt;section&gt; 태그는 주제별 그룹의 콘텐츠 섹션을 나타낼 때 사용하며, 각 섹션에는 &lt;h1&gt;~&lt;h6&gt; 요소를 자식으로 포함시켜 식별해야 합니다.</li>
+                    <li>&lt;select&gt; 태그는 선택 목록을 설정합니다.</li>
+                    <li>&lt;small&gt; 태그는 저작권 및 법적인 텍스트에 설정합니다.</li>
+                    <li>&lt;source&gt; 태그는 &lt;picture&gt;, &lt;audio&gt; 요소 및 &lt;video 요소에 소스를 지정하는데 사용합니다. 닫는 태그가 없는 빈요소입니다.</li>
                 </ul>
             </div>
         </div>
