--- a/javascript/javascript601.html
+++ b/javascript/javascript601.html
@@ -823,7 +823,7 @@
 
             document.querySelector(".sample06_N2").innerHTML = "2";
             document.querySelector(".sample06_Q2").innerHTML = "['javascript', 'react', 'vue']";
-            document.querySelector(".sample06_M2").innerHTML = "찾는 요소";
+            document.querySelector(".sample06_M2").innerHTML = "찾는 요소 : javascript";
             document.querySelector(".sample06_R2").innerHTML = find2;
 
             const text2 = ['javascript', 'react', 'vue'];
