--- a/refer-css/index.html
+++ b/refer-css/index.html
@@ -428,7 +428,7 @@
                     </tr>
                     <tr>
                         <td>border-width</td>
-                        <td>border-top-width 속성은 테두리 두께 속성을 설정합니다.</td>
+                        <td>border-width 속성은 테두리 두께 속성을 설정합니다.</td>
                     </tr>
                     <tr>
                         <td>bottom</td>
