--- a/javascript/javascript300.html
+++ b/javascript/javascript300.html
@@ -383,7 +383,7 @@
     <hr>
 
     <div id="sample07" class="sample">
-        <h2>07. 화살표 함수 : 익명 함수 <span class="dot"></span></h2>
+        <h2>07. 화살표 함수 : 리턴값 함수 <span class="dot"></span></h2>
         <div class="code">
             <pre class="line-numbers"><code class="language-js">{
     func = () => {
