--- a/javascript/javascript500.html
+++ b/javascript/javascript500.html
@@ -387,7 +387,7 @@
     <hr>
 
     <div id="sample7" class="sample">
-        <h2>07. 배열 : 데이터 불러오기 : for문<span class="dot"></span></h2>
+        <h2>07. 배열 : 데이터 불러오기 : forEach문<span class="dot"></span></h2>
         <div class="code">
             <pre class="line-numbers"><code class="language-js">{
     const num = [100, 200, 300, 400, 500]
