--- a/javascript/javascript500.html
+++ b/javascript/javascript500.html
@@ -865,6 +865,8 @@
                 document.write(el);
             }); //es5
 
+            document.write("<br>");
+
             //forEach(element, index, array)
             //num.forEach(function()=>{}); //es6
 
