--- a/javascript/javascript200.html
+++ b/javascript/javascript200.html
@@ -937,7 +937,9 @@
                 document.write(num, " &nbsp");
             }
         }
-
+        
+           document.write("<br>");
+           document.write("<br>");
 
     </script>
 </body>
