--- a/javascript/javascript100.html
+++ b/javascript/javascript100.html
@@ -286,6 +286,13 @@
         <li><a href="#sample16">16. 객체 : 데이터 저장(키와 값) : 표현 방법8 : 객체 속에 함수</a></li>
     </ul>
 
+    <h2 class="mt20">추가</h2>
+    <ul>
+        <li><a href="#sample17">17. 변수의 종류 : 변수(전역/지역), 매개변수</a></li>
+        <li><a href="#sample18">18. 변수의 변환 : 형 변환</a></li>
+        <li><a href="#sample18">19. 변수의 유형 : 별도 이름 저장</a></li>
+    </ul>
+
     <hr>
 
     <div id="sample1" class="sample">
@@ -658,6 +665,100 @@
         </div>
     </div>
 
+    <hr>
+
+    <div id="sample17" class="sample">
+        <h2>17. 변수의 종류 : 지역변수, 전역 변수<span class="dot"></span></h2>
+        <div class="code">
+            <pre class="line-numbers"><code class="language-js">{
+    let x = 100;      //변수 설정 : 전역 변수
+    let y = 200;
+    let z = "javascript";
+    let a = 300;
+
+    //함수 안에 넣고 실행
+    function func(){
+        let x = 100;        //변수 설정 : 지역 변수
+        let y = 200;
+        let z = "javascript";
+        a = 400;            //전역 변수 : 변수 값이 300 -> 400변경
+        y = 500;            //지역 변수 : 변수 값이 200 -> 500 변경
+
+        document.write("함수 안");
+        document.write(x);
+        document.write(y);
+        document.write(z);
+        document.write(a);
+    }
+    func();
+
+        document.write("함수 밖");
+        document.write(x);
+        document.write(y);
+        document.write(z);
+        document.write(a);
+}
+</code></pre>
+        </div>
+    </div>
+
+    <hr>
+
+    <div id="sample18" class="sample">
+        <h2>18. 변수의 변환 : 형 변환<span class="dot"></span></h2>
+        <div class="code">
+            <pre class="line-numbers"><code class="language-js">{
+    let x = 100;
+    let y = "100";
+
+    document.write("x : " + x + " : " + typeof(x));
+    document.write("y : " + y + " : " + typeof(y));
+
+    x = "" + x;     //숫자를 문자열로 형 변환
+    document.write("x : " + x + " : " + typeof(x));
+
+    y = Number(y);  //내장 객체를 이용한 형 변환
+    document.write("y : " + y + " : " + typeof(y));
+
+    x = Number(x);
+    document.write("x : " + x + " : " + typeof(x));
+
+    y = String(y);
+    document.write("y : " + y + " : " + typeof(y));
+}
+</code></pre>
+        </div>
+    </div>
+
+    <hr>
+
+    <div id="sample19" class="sample">
+        <h2>19. 변수의 변환 : 형 변환<span class="dot"></span></h2>
+        <div class="code">
+            <pre class="line-numbers"><code class="language-js">{
+    let num1 = 100;
+    let str = "javascript"
+    let func = function(){};
+    let arr = [1,2,3];
+    let obj = {a:1, b:2, c:3};
+    let boo = true;
+    let nul;                //아무런 값이 없을 때
+    let und = undefined     //값이 정의 되어 있지 않을 때
+    let sym = Symbol();
+
+    document.write(typeof(num1));
+    document.write(typeof(str));
+    document.write(typeof(func));
+    document.write(typeof(arr));
+    document.write(typeof(obj));
+    document.write(typeof(boo));
+    document.write(typeof(nul));
+    document.write(typeof(und));
+    document.write(typeof(sym));
+}
+</code></pre>
+        </div>
+    </div>
 
     <hr>
     <hr>
@@ -917,8 +1018,92 @@
             obj.f();
         }
 
+        document.write("<br>")
+
+        //sample17
+        {
+          document.write("*** 17. 변수의 종류 ***<br>");
+
+          let x = 100;      //변수 설정 : 전역 변수
+          let y = 200;
+          let z = "javascript";
+          let a = 300;
+
+          //함수 안에 넣고 실행
+          function func(){
+            let x = 100;        //변수 설정 : 지역 변수
+            let y = 200;
+            let z = "javascript";
+            a = 400;            //전역 변수 : 변수 값이 300 -> 400변경
+            y = 500;            //지역 변수 : 변수 값이 200 -> 500 변경
+
+              document.write("함수 안", "<br>");
+              document.write(x, "<br>");
+              document.write(y, "<br>");
+              document.write(z, "<br>");
+              document.write(a, "<br><br>");
+          }
+          func();
+
+              document.write("함수 밖", "<br>");
+              document.write(x, "<br>");
+              document.write(y, "<br>");
+              document.write(z, "<br>");
+              document.write(a, "<br><br>");
+        }
+
+        //sample18
+        {
+            document.write("*** 18. 변수의 변환 ***<br>");
+
+            let x = 100;
+            let y = "100";
+
+            document.write("x : " + x + " : " + typeof(x),"<br>");
+            document.write("y : " + y + " : " + typeof(y),"<br><br>");
+
+            x = "" + x; //숫자를 문자열로 형 변환
+            document.write("x : " + x + " : " + typeof(x),"<br>");
+
+            y = Number(y);  //내장 객체를 이용한 형 변환
+            document.write("y : " + y + " : " + typeof(y), "<br><br>");
+
+            x = Number(x);
+            document.write("x : " + x + " : " + typeof(x),"<br>");
+
+            y = String(y);
+            document.write("y : " + y + " : " + typeof(y), "<br><br>");
+        }
+
+         //sample18 변수의 유형(데이터 타입)
+         //변수 : 숫자(number), 문자(string), 함수(function), 배열(obj)
+         //       객체(object), 불린(boolean), 특수값(null, undefinde), 심볼(symbol)
+         {
+            document.write("*** 18. 변수의 유형 ***<br>");
+            
+            let num1 = 100;
+            let str = "javascript"
+            let func = function(){};
+            let arr = [1,2,3];
+            let obj = {a:1, b:2, c:3};
+            let boo = true;
+            let nul;                //아무런 값이 없을 때
+            let und = undefined     //값이 정의 되어 있지 않을 때
+            let sym = Symbol();
+
+            document.write(typeof(num1), "<br>");
+            document.write(typeof(str), "<br>");
+            document.write(typeof(func), "<br>");
+            document.write(typeof(arr), "<br>");
+            document.write(typeof(obj), "<br>");
+            document.write(typeof(boo), "<br>");
+            document.write(typeof(nul), "<br>");
+            document.write(typeof(und), "<br>");
+            document.write(typeof(sym), "<br>");
+         }
+
+
 
     </script>
 </body>
-
 </html>
