--- a/index.html
+++ b/index.html
@@ -295,14 +295,14 @@
                             <div class="image-wrap">
                                 <div class="hover-wrap">
                                     <span class="overlay-img-donut">wireframe</span>
-                                    <span class="overlay-text-thumb-donut">와이어프레임</span>
-                                    <span class="overlay-text-thumb1-donut">와이어프레임</span>
+                                    <span class="overlay-text-thumb-donut">사이트 제작</span>
+                                    <span class="overlay-text-thumb1-donut">사이트 제작</span>
                                     <span class="overlay-text-thumb2-donut">wireframe</span>
                                 </div>
                                 <img src="assets/img/svg-soft-ice-cream.svg" alt="portfolio">
                                 <div class="img-text donutImg">
                                     <h5>wireframe</h5>
-                                    <p>와이어프레임</p>
+                                    <p>사이트 제작</p>
                                     <span>wireframe</span>
                                 </div>
                             </div>
