--- a/javascript/javascript100.html
+++ b/javascript/javascript100.html
@@ -224,11 +224,30 @@
         }
 
         .ol5::before {
-            content: "데이터 연습하기 : ";
+            content: "데이터 내장 객체 : ";
         }
 
         .ol6::before {
-            content: "데이터 메서드 : ";
+            content: "공부하기 : ";
+        }
+        .page {
+            text-align: right;
+            right: 20px;
+            top: 15px;
+        }
+
+        .page li {
+            display: inline;
+            list-style: none;
+        }
+
+        .page li a a {
+            color: #222;
+            text-decoration: 
+        }
+
+        .page li a:hover {
+            color: #4fc3f7;
         }
 
     </style>
@@ -236,6 +255,11 @@
 
 <body>
     <h1>Javascript 문법 정리</h1>
+    <ul class="page">
+        <li><a href="../refer-html/index.html">HTML</a></li>
+        <li><a href="../refer-css/index.html">CSS</a></li>
+        <li><a href="../javascript/javascript100.html">JAVASCRIPT</a></li>
+    </ul>
     <ol class="ol1">
         <li><a href="javascript100.html">변수</a></li>
         <li><a href="javascript100.html">상수</a></li>
@@ -259,11 +283,18 @@
         <li><a href="javascript400.html">알고리즘</a></li>
     </ol>
     <ol class="ol6">
-        <li><a href="javascript601.html">배열 메서드</a></li>
-        <li><a href="javascript602.html">문자열 메서드</a></li>
-        <li><a href="javascript603.html">브라우저 메서드</a></li>
-        <li><a href="javascript604.html">날짜 메서드</a></li>
-        <li><a href="javascript605.html">이벤트 메서드</a></li>
+        <li><a href="javascript602.html">문자열 객체</a></li>
+        <li><a href="javascript601.html">배열 객체</a></li>
+        <li><a href="javascript604.html">날짜 객체</a></li>
+        <li><a href="javascript609.html">수학 객체</a></li>
+        <li><a href="javascript608.html">숫자 객체</a></li>
+        <li><a href="javascript603.html">브라우저 객체</a></li>
+        <li><a href="javascript607.html">요소 객체</a></li>
+        <li><a href="javascript605.html">이벤트 객체</a></li>
+    </ol>
+    <ol class="ol6">
+        <li><a href="javascript606.html">샘플</a></li>
+        <li><a href="javascript400.html">알고리즘</a></li>
     </ol>
 
     <h2 class="mt20">데이터 저장하기</h2>
