--- a/javascript/javascript609.html
+++ b/javascript/javascript609.html
@@ -272,14 +272,6 @@
             color: #000;
             background-color: #f5f5f5;
         }
-
-        .sam {
-            background-color: #000;
-            color: #fff;
-            border-radius: 30px;
-            padding: 0.1em 1.5em;
-            font-size: 0.8em;
-        }
     </style>
 </head>
 
@@ -303,6 +295,9 @@
     <ol class="ol4">
         <li><a href="javascript200.html">조건문</a></li>
         <li><a href="javascript200.html">반복문</a></li>
+    </ol>
+    <ol class="ol5">
+        <li><a href="javascript400.html">알고리즘</a></li>
     </ol>
     <ol class="ol5">
         <li><a href="javascript602.html">문자열 객체</a></li>
@@ -344,15 +339,17 @@
         <li><a href="#sample06">06. 배열 메서드 : Array.from() : 배열로 변환 : 반환(배열)</a></li>
     </ul>
 
-    <h2 class="mt20">문자열 샘플</h2>
+    <h2 class="mt20">샘플</h2>
     <ul>
-        <li><a href="javascriptSample01.html">01. CSS 속성 첫 글자만 검색하기</a><a class="sam" href="javascript602.html">charAt()</a></li>
-        <li><a href="javascriptSample02.html">02. CSS 속성 검색하면 설명 보여주기</a><a class="sam" href="javascript601.html">find()</a></li>
-        <li><a href="javascriptSample03.html">02. CSS 정렬하기</a><a class="sam" href="javascript601.html">sort()</a></li>
+        <li><a href="javascript602-1.html">01. CSS 속성 첫 글자만 검색하기</a></li>
+        <li><a href="javascript602-2.html">02. CSS 속성 검색하면 설명 보여주기</a></li>
+        <li><a href="javascript602-3.html">02. CSS 정렬하기</a></li>
     </ul>
-    <h2 class="mt20">날짜 샘플</h2>
+    <h2 class="mt20">샘플</h2>
     <ul>
-        <li><a href="javascript604-1.html">01. 시계 만들기</a><a href="javascript604.html">getHours()</a></li>
+        <li><a href="javascript603-1.html">01. html 속성 첫 글자만 검색하기</a></li>
+        <li><a href="javascript603-2.html">02. html 속성 검색하면 설명 보여주기</a></li>
+        <li><a href="javascript603-3.html">02. html 정렬하기</a></li>
     </ul>
 
     <hr>
