--- a/refer-html/index.html
+++ b/refer-html/index.html
@@ -86,6 +86,15 @@
             background-color: #4fc3f7;
             color: #fff;
         }
+
+        .refer h3 a {
+                text-decoration: none;
+                color: #fff;
+        }
+            .refer h3.active {
+                box-shadow: inset 0px -5px 0 0px #3aa6d8;
+        }
+
         .refer table {
             width: 100%;
             border: 1px solid #aaa;
@@ -114,6 +123,7 @@
 
         .link li {
            list-style: none;
+           display: inline;
         }
 
         .link li a {
@@ -128,6 +138,24 @@
 
         .link li a:hover {
             background-color: #4fc3f7;
+        }
+
+        .page {
+            text-align: right;
+        }
+
+        .page li {
+            display: inline;
+            list-style: none;
+        }
+
+        .page li a a {
+            color: #222;
+            text-decoration: 
+        }
+
+        .page li a:hover {
+            color: #4fc3f7;
         }
 
         @media (max-width: 1220px){
@@ -165,6 +193,7 @@
                 font-size: 16px;
                 padding: 6px 10px;
             }
+
             .refer table th {
                 padding: 8px;
             }
@@ -185,11 +214,14 @@
 
     <main  id="contents">
         <h2>HTML <em>레퍼런스 북</em></h2>
-        <ul class="link">
-            <li><a href="../javascript/javascript602-2.html">HTML 속성 첫 글자 검색하기</a></li>
-        </ul>
         <section class="refer">
-            <h3>Alphabet</h3>
+            <h3 class="active"><a href="index.html">Alphabet</a></h3>
+            <h3><a href="index2.html">Topics</a></h3>
+            <ul class="page">
+                <li><a href="../refer-html/index.html">HTML</a></li>
+                <li><a href="../refer-css/index.html">CSS</a></li>
+                <li><a href="../javascript/javascript100.html">JAVASCRIPT</a></li>
+            </ul>
             <table>
                 <colgroup>
                     <col style="width: 30%">
