--- a/javascript/javascript602.html
+++ b/javascript/javascript602.html
@@ -405,6 +405,18 @@
     const num2 = 200;
 
     document.querySelector(".sample01_R2").innerHTML = num1 + num2;
+
+    const txt1 = "모던";
+    const txt2 = " 자바스크립트";
+    const txt3 = " 핵심";
+
+    document.querySelector(".sample01_R3").innerHTML = `나는 ${txt1}(modern) ${txt2}(javascrpt) ${txt3}을 갖고싶다`;
+
+    const tem1 = "모던";
+    const tem2 = " 자바스크립트";
+    const tem3 = " 핵심";
+
+    document.querySelector(".sample01_R4").innerHTML = `나는 ${txt1}(modern) ${txt2}(javascrpt) ${txt3}을 갖고싶다`;
 }
 </code></pre>
         </div>
