20210813테이블 수정
테이블

--- a/javascript/javascriptRefer05.html
+++ b/javascript/javascriptRefer05.html
@@ -321,6 +321,11 @@
         .sample pre {
             font-size: 14px;
         }
+        .view table td.result {
+            color: #000;
+            transition: all 0.3s;
+            cursor: zoom-in;
+        }
 }
     </style>
 </head>
