--- a/javascript/javascriptRefer06.html
+++ b/javascript/javascriptRefer06.html
@@ -24,6 +24,7 @@
             padding: 0;
             font-family: 'NEXON Lv1 Gothic OTF';
             line-height: 1.6;
+            word-break: break-all;
         }
 
         body {
