--- a/javascript/javascriptRefer07.html
+++ b/javascript/javascriptRefer07.html
@@ -17,6 +17,7 @@
             src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_20-04@2.1/NEXON Lv1 Gothic OTF.woff') format('woff');
             font-weight: normal;
             font-style: normal;
+            word-break: break-all;
         }
 
         * {
