--- a/javascript/javascriptRefer07.html
+++ b/javascript/javascriptRefer07.html
@@ -78,39 +78,6 @@
             border-radius: 5px 5px 0 0;
         }
 
-        .sample h2 .dot {
-            width: 10px;
-            height: 10px;
-            background: #989898;
-            display: block;
-            border-radius: 50%;
-            position: absolute;
-            right: 30px;
-            top: 20px;
-        }
-
-        .sample h2 .dot::before {
-            content: '';
-            width: 10px;
-            height: 10px;
-            background: #989898;
-            border-radius: 50%;
-            position: absolute;
-            left: -15px;
-            top: 0;
-        }
-
-        .sample h2 .dot::after {
-            content: '';
-            width: 10px;
-            height: 10px;
-            background: #989898;
-            position: absolute;
-            border-radius: 50%;
-            right: -15px;
-            top: 0;
-        }
-
         .sample .ex {
             padding: 20px;
         }
@@ -301,25 +268,30 @@
         }
 
         @media (max-width: 800px){
-        .menu li a {
-            font-size: 12px;
-            padding: 5px 20px;
+            body {
+            font-size: 13px;
         }
-        .list li {
-            line-height: 1.3;
-        }
-        .list a {
-            font-size: 12px;
+        h1 {
+            text-align: center;
         }
         .sample h2 {
-            padding: 12px 10px 10px 10px;
             font-size: 14px;
+            font-weight: none;
+            padding: 7px 5px 5px;
         }
         .sample h2 .dot {
-            display: none;
+            display: : none;
         }
-        .sample pre {
-            font-size: 14px;
+        .view {
+            padding: 5px;
+            overflow-x: scroll;
+            overflow: auto;
+        }
+        .view th {
+            font-weight: normal;
+        }
+        .view table td.result {
+            color: #000;
         }
 }
     </style>
