--- a/javascript/javascriptRefer12.html
+++ b/javascript/javascriptRefer12.html
@@ -180,35 +180,9 @@
         }
 
         ol {
-            list-style: none;
+            padding-left: 26px;
         }
 
-        ol li {
-            display: inline;
-            text-align: center;
-            line-height: 40px;
-            margin-bottom: 5px;
-        }
-
-        ol li a {
-            display: inline-block;
-            border-radius: 30px;
-            padding: 2px 20px 0px 20px;
-            border: 1px solid #000;
-        }
-
-        ol li a:hover {
-            background: #000;
-            color: #fff;
-        }
-
-        ol li.active {
-            background: #000;
-        }
-
-        ol li.active a {
-            color: #fff;
-        }
         .mt20 {
             margin-top: 20px;
         }
@@ -303,13 +277,17 @@
 
     <h2 class="mt20">문자열 샘플</h2>
     <ul>
+        <ol>
         <li><a href="javascriptSample01.html">01. CSS 속성 첫 글자만 검색하기</a><a class="sam" href="javascript602.html">charAt()</a></li>
         <li><a href="javascriptSample02.html">02. CSS 속성 검색하면 설명 보여주기</a><a class="sam" href="javascript601.html">find()</a></li>
         <li><a href="javascriptSample03.html">02. CSS 정렬하기</a><a class="sam" href="javascript601.html">sort()</a></li>
+        </ol>
     </ul>
     <h2 class="mt20">날짜 샘플</h2>
     <ul>
+        <ol>
         <li><a href="javascript604-1.html">01. 시계 만들기</a><a href="javascript604.html">getHours()</a></li>
+        </ol>
     </ul>
 
     <hr>
