--- a/javascript/javascriptRefer13.html
+++ b/javascript/javascriptRefer13.html
@@ -180,35 +180,9 @@
         }
 
         ol {
-            list-style: none;
+            padding-left: 26px;
         }
-
-        ol li {
-            display: inline;
-            text-align: center;
-            line-height: 40px;
-            margin-bottom: 5px;
-        }
-
-        ol li a {
-            display: inline-block;
-            border-radius: 30px;
-            padding: 2px 20px 0px 20px;
-            border: 1px solid #000;
-        }
-
-        ol li a:hover {
-            background: #000;
-            color: #fff;
-        }
-
-        ol li.active {
-            background: #000;
-        }
-
-        ol li.active a {
-            color: #fff;
-        }
+        
         .mt20 {
             margin-top: 20px;
         }
