--- a/javascript/javascriptRefer05.html
+++ b/javascript/javascriptRefer05.html
@@ -148,35 +148,9 @@
         }
 
         ol {
-            list-style: none;
+            padding-left: 26px;
         }
 
-        ol li {
-            display: inline;
-            text-align: center;
-            line-height: 40px;
-            margin-bottom: 5px;
-        }
-
-        ol li a {
-            display: inline-block;
-            border-radius: 30px;
-            padding: 2px 20px 0px 20px;
-            border: 1px solid #000;
-        }
-
-        ol li a:hover {
-            background: #000;
-            color: #fff;
-        }
-
-        ol li.active {
-            background: #000;
-        }
-
-        ol li.active a {
-            color: #fff;
-        }
         .mt20 {
             margin-top: 20px;
         }
@@ -222,6 +196,7 @@
         }
         .view {
             padding: 20px;
+            overflow: ;
         }
 
         .view table {
@@ -283,15 +258,22 @@
             display: : none;
         }
         .view {
-            padding: 5px;
-            overflow-x: scroll;
+            border-right: 1px solid #E6E6E6;
+            border-left: 1px solid #E6E6E6;
             overflow: auto;
         }
-        .view th {
-            font-weight: normal;
+        .view table {
+            border-left: 0px;
+            border-right: 0px;
+        }
+        .view table th,
+        .view table td {
+            white-space: nowrap;
+            font-size: 13px;
         }
         .view table td.result {
-            color: #000;
+            color: #BDBDBD;
+            background: #F1F1F1;
         }
 }
     </style>
@@ -323,6 +305,7 @@
 
     <h2 class="mt20">문자열 메서드</h2>
     <ul class="list">
+        <ol>
         <li><a href="#sample01">01. 문자열 메서드 : 문자열 결합 / 템플릿 문자열</a></li>
         <li><a href="#sample02">02. 문자열 속성 : length : 문자열 길이 구하기 : 반환(숫자)</a></li>
         <li><a href="#sample03">03. 문자열 메서드 : toUpperCase() : 문자열 대문자 변경하기 : 반환(문자열)</a></li>
@@ -345,6 +328,7 @@
         <li><a href="#sample11">11. 문자열 메서드 : encodeURIcomponent() : 문자열 인코딩 : 반환(문자열)</a></li>
         <li><a href="#sample11">11. 문자열 메서드 : decodeURI() : 문자열 디코딩 : 반환(문자열)</a></li>
         <li><a href="#sample11">11. 문자열 메서드 : decodeURIcomponent() : 문자열 디코딩 : 반환(문자열)</a></li>
+        </ol>
     </ul>
 
     <hr>
