--- a/javascript/javascriptRefer06.html
+++ b/javascript/javascriptRefer06.html
@@ -148,35 +148,9 @@
         }
 
         ol {
-            list-style: none;
+            padding-left: 26px;
         }
 
-        ol li {
-            display: inline;
-            text-align: center;
-            line-height: 40px;
-            margin-bottom: 5px;
-        }
-
-        ol li a {
-            display: inline-block;
-            border-radius: 30px;
-            padding: 2px 20px 0px 20px;
-            border: 1px solid #000;
-        }
-
-        ol li a:hover {
-            background: #000;
-            color: #fff;
-        }
-
-        ol li.active {
-            background: #000;
-        }
-
-        ol li.active a {
-            color: #fff;
-        }
         .mt20 {
             margin-top: 20px;
         }
@@ -283,15 +257,22 @@
             display: : none;
         }
         .view {
-            padding: 5px;
-            overflow-x: scroll;
+            border-right: 1px solid #E6E6E6;
+            border-left: 1px solid #E6E6E6;
             overflow: auto;
         }
-        .view th {
-            font-weight: normal;
+        .view table {
+            border-left: 0px;
+            border-right: 0px;
+        }
+        .view table th,
+        .view table td {
+            white-space: nowrap;
+            font-size: 13px;
         }
         .view table td.result {
-            color: #000;
+            color: #BDBDBD;
+            background: #F1F1F1;
         }
 }
     </style>
@@ -323,6 +304,7 @@
 
     <h2 class="mt20">배열 메서드</h2>
     <ul class="list">
+        <ol>
         <li><a href="#sample01">01. 배열 메서드 : length : 배열 길이 구하기 : 반환(숫자)</a></li>
         <li><a href="#sample02">02. 배열 메서드 : join() : 배열 요소 결합하기 : 반환(문자열)</a></li>
         <li><a href="#sample03">03. 배열 메서드 : push() : 배열 마지막 요소에 추가하기 : 반환(숫자)</a></li>
@@ -344,6 +326,7 @@
         <li><a href="#sample13">13. 배열 메서드 : reduce() : 배열 요소 하나로 만들기 : 반환(결과값)</a></li>
         <li><a href="#sample13">13. 배열 메서드 : reduceRight() : 배열 요소 하나로 만들기 : 반환(결과값)</a></li>
         <li><a href="#sample14">14. 배열 메서드 : Array.from() : 배열로 변환 : 반환(배열)</a></li>
+        </ol>
     </ul>
 
     <hr>
@@ -1540,7 +1523,7 @@
             document.querySelector(".sample09_A5").innerHTML = arrNum5;
 
             const arrNum6 = [100, 200, 300, 400, 500];
-            const result6 = arrNum5.splice(0, 4, 'javascript', 'jquery');
+            const result6 = arrNum6.splice(0, 4, 'javascript', 'jquery');
 
             document.querySelector(".sample09_N6").innerHTML = "6";
             document.querySelector(".sample09_Q6").innerHTML = "[100, 200, 300, 400, 500]";
