--- a/javascript/javascriptRefer07.html
+++ b/javascript/javascriptRefer07.html
@@ -148,35 +148,9 @@
         }
 
         ol {
-            list-style: none;
+            padding-left: 26px;
         }
 
-        ol li {
-            display: inline;
-            text-align: center;
-            line-height: 40px;
-            margin-bottom: 5px;
-        }
-
-        ol li a {
-            display: inline-block;
-            border-radius: 30px;
-            padding: 2px 20px 0px 20px;
-            border: 1px solid #000;
-        }
-
-        ol li a:hover {
-            background: #000;
-            color: #fff;
-        }
-
-        ol li.active {
-            background: #000;
-        }
-
-        ol li.active a {
-            color: #fff;
-        }
         .mt20 {
             margin-top: 20px;
         }
@@ -283,15 +257,22 @@
             display: : none;
         }
         .view {
-            padding: 5px;
-            overflow-x: scroll;
+            border-right: 1px solid #E6E6E6;
+            border-left: 1px solid #E6E6E6;
             overflow: auto;
         }
-        .view th {
-            font-weight: normal;
+        .view table {
+            border-left: 0px;
+            border-right: 0px;
+        }
+        .view table th,
+        .view table td {
+            white-space: nowrap;
+            font-size: 13px;
         }
         .view table td.result {
-            color: #000;
+            color: #BDBDBD;
+            background: #F1F1F1;
         }
 }
     </style>
@@ -323,6 +304,7 @@
 
     <h2 class="mt20">날짜 메서드</h2>
     <ul class="list">
+        <ol>
         <li><a href="#sample01">01. 날짜 메서드 : getFullyear() : 연도 불러오기</a></li>
         <li><a href="#sample02">01. 날짜 메서드 : getMonth() : 월 불러오기</a></li>
         <li><a href="#sample02">01. 날짜 메서드 : getDate() : 일 불러오기</a></li>
@@ -335,6 +317,7 @@
         <li><a href="#sample02">02. 날짜 메서드 : toLocaleDateString() : 현재 날짜를 문자열로 불러오기</a></li>
         <li><a href="#sample02">02. 날짜 메서드 : toLocaleTimeString() : 현재 날짜를 문자열로 불러오기</a></li>
         <li><a href="#sample03">03. 날짜 메서드 : dat.parse() : 날짜 문자열 타임스탬프 불러오기</a></li>
+        </ol>
     </ul>
 
     <hr>
