--- a/javascript/javascriptRefer05.html
+++ b/javascript/javascriptRefer05.html
@@ -306,28 +306,28 @@
     <h2 class="mt20">문자열 메서드</h2>
     <ul class="list">
         <ol>
-        <li><a href="#sample01">01. 문자열 메서드 : 문자열 결합 / 템플릿 문자열</a></li>
-        <li><a href="#sample02">02. 문자열 속성 : length : 문자열 길이 구하기 : 반환(숫자)</a></li>
-        <li><a href="#sample03">03. 문자열 메서드 : toUpperCase() : 문자열 대문자 변경하기 : 반환(문자열)</a></li>
-        <li><a href="#sample03">03. 문자열 메서드 : toUpperCase() : 문자열 소문자 변경하기 : 반환(문자열)</a></li>
-        <li><a href="#sample04">04. 문자열 메서드 : trim() : 문자열 공백 제거하기 : 반환(문자열)</a></li>
-        <li><a href="#sample05">05. 문자열 메서드 : indexOf() : 문자열 검색하기 : 반환(숫자)</a></li>
-        <li><a href="#sample05">05. 문자열 메서드 : lastIndexOf() : 문자열 검색하기 : 반환(숫자)</a></li>
-        <li><a href="#sample05">05. 문자열 메서드 : search() : 문자열 검색하기 : 반환(숫자)</a></li>
-        <li><a href="#sample05">05. 문자열 메서드 : includes() : 문자열 포함 여부 : 반환(불린)</a></li>
-        <li><a href="#sample05">05. 문자열 메서드 : startsWith() : 문자열 포함 여부 : 반환(불린)</a></li>
-        <li><a href="#sample05">05. 문자열 메서드 : endsWith() : 문자열 포함 여부 : 반환(불린)</a></li>
-        <li><a href="#sample06">06. 문자열 메서드 : charAt() : 지정한 인덱스의 문자를 추출 : 반환(문자)</a>
-        <li><a href="#sample07">07. 문자열 메서드 : slice() substring() : 지정한 범위 내 문자를 추출 : 반환(문자열)</a></li>
-        <li><a href="#sample07">07. 문자열 메서드 : substr() : 지정한 범위 내 문자열을 추출 : 반환(문자열)</a></li>
-        <li><a href="#sample08">08. 문자열 메서드 : replace() : 문자열 변경 : 반환(문자열)</a></li>
-        <li><a href="#sample10">09. 문자열 메서드 : split() : 문자열 반환 : 반환(문자열)</a></li>
-        <li><a href="#sample10">10. 문자열 메서드 : padStart() : 문자열 시작 부분에 문자열 추가 : 반환(문자열)</a></li>
-        <li><a href="#sample10">10. 문자열 메서드 : padEnd() : 문자열 끝 부분에 문자열 추가 : 반환(문자열)</a></li>
-        <li><a href="#sample10">11. 문자열 메서드 : encodeURI() : 문자열 인코딩 : 반환(문자열)</a></li>
-        <li><a href="#sample11">11. 문자열 메서드 : encodeURIcomponent() : 문자열 인코딩 : 반환(문자열)</a></li>
-        <li><a href="#sample11">11. 문자열 메서드 : decodeURI() : 문자열 디코딩 : 반환(문자열)</a></li>
-        <li><a href="#sample11">11. 문자열 메서드 : decodeURIcomponent() : 문자열 디코딩 : 반환(문자열)</a></li>
+        <li><a href="#sample01">문자열 메서드 : 문자열 결합 / 템플릿 문자열</a></li>
+        <li><a href="#sample02">문자열 속성 : length : 문자열 길이 구하기 : 반환(숫자)</a></li>
+        <li><a href="#sample03">문자열 메서드 : toUpperCase() : 문자열 대문자 변경하기 : 반환(문자열)</a></li>
+        <li><a href="#sample03">문자열 메서드 : toUpperCase() : 문자열 소문자 변경하기 : 반환(문자열)</a></li>
+        <li><a href="#sample04">문자열 메서드 : trim() : 문자열 공백 제거하기 : 반환(문자열)</a></li>
+        <li><a href="#sample05">문자열 메서드 : indexOf() : 문자열 검색하기 : 반환(숫자)</a></li>
+        <li><a href="#sample05">문자열 메서드 : lastIndexOf() : 문자열 검색하기 : 반환(숫자)</a></li>
+        <li><a href="#sample05">문자열 메서드 : search() : 문자열 검색하기 : 반환(숫자)</a></li>
+        <li><a href="#sample05">문자열 메서드 : includes() : 문자열 포함 여부 : 반환(불린)</a></li>
+        <li><a href="#sample05">문자열 메서드 : startsWith() : 문자열 포함 여부 : 반환(불린)</a></li>
+        <li><a href="#sample05">문자열 메서드 : endsWith() : 문자열 포함 여부 : 반환(불린)</a></li>
+        <li><a href="#sample06">문자열 메서드 : charAt() : 지정한 인덱스의 문자를 추출 : 반환(문자)</a>
+        <li><a href="#sample07">문자열 메서드 : slice() substring() : 지정한 범위 내 문자를 추출 : 반환(문자열)</a></li>
+        <li><a href="#sample07">문자열 메서드 : substr() : 지정한 범위 내 문자열을 추출 : 반환(문자열)</a></li>
+        <li><a href="#sample08">문자열 메서드 : replace() : 문자열 변경 : 반환(문자열)</a></li>
+        <li><a href="#sample10">문자열 메서드 : split() : 문자열 반환 : 반환(문자열)</a></li>
+        <li><a href="#sample10">문자열 메서드 : padStart() : 문자열 시작 부분에 문자열 추가 : 반환(문자열)</a></li>
+        <li><a href="#sample10">문자열 메서드 : padEnd() : 문자열 끝 부분에 문자열 추가 : 반환(문자열)</a></li>
+        <li><a href="#sample10">문자열 메서드 : encodeURI() : 문자열 인코딩 : 반환(문자열)</a></li>
+        <li><a href="#sample11">문자열 메서드 : encodeURIcomponent() : 문자열 인코딩 : 반환(문자열)</a></li>
+        <li><a href="#sample11">문자열 메서드 : decodeURI() : 문자열 디코딩 : 반환(문자열)</a></li>
+        <li><a href="#sample11">문자열 메서드 : decodeURIcomponent() : 문자열 디코딩 : 반환(문자열)</a></li>
         </ol>
     </ul>
 
