--- a/javascript/javascriptRefer06.html
+++ b/javascript/javascriptRefer06.html
@@ -305,27 +305,27 @@
     <h2 class="mt20">배열 메서드</h2>
     <ul class="list">
         <ol>
-        <li><a href="#sample01">01. 배열 메서드 : length : 배열 길이 구하기 : 반환(숫자)</a></li>
-        <li><a href="#sample02">02. 배열 메서드 : join() : 배열 요소 결합하기 : 반환(문자열)</a></li>
-        <li><a href="#sample03">03. 배열 메서드 : push() : 배열 마지막 요소에 추가하기 : 반환(숫자)</a></li>
-        <li><a href="#sample03">03. 배열 메서드 : unshift() : 배열 첫 요소에 추가하기 : 반환(숫자)</a></li>
-        <li><a href="#sample04">04. 배열 메서드 : shift() : 배열 첫 요소에 삭제하기 : 반환(삭제된 요소)</a></li>
-        <li><a href="#sample04">04. 배열 메서드 : pop() : 배열 마지막 요소에 삭제하기 : 반환(삭제된 요소)</a></li>
-        <li><a href="#sample05">05. 배열 메서드 : indexoF() : 배열 요소 검색하기 : 반환(숫자)</a></li>
-        <li><a href="#sample05">05. 배열 메서드 : lastIndexOf() : 배열 요소 끝에서 검색하기 : 반환(숫자)</a></li>
-        <li><a href="#sample05">06. 배열 메서드 : includes() : 배열 요소 검색하기 : 반환(불린)</a></li>
-        <li><a href="#sample05">06. 배열 메서드 : reverse() : 배열 요소 순서를 반대로 정렬 : 반환(배열)</a></li>
-        <li><a href="#sample05">06. 배열 메서드 : sort() : 배열 요소 검색하기 : 반환(배열)</a></li>
-        <li><a href="#sample05">07. 배열 메서드 : concat() : 배열 요소 결합 : 반환(배열)</a></li>
-        <li><a href="#sample05">08. 배열 메서드 : slice() : 배열 요소 다른 요소로 변경 : 반환(배열)</a></li>
-        <li><a href="#sample05">09. 배열 메서드 : splice() : 배열 요소 다른 요소로 변경 : 반환(배열)</a></li>
-        <li><a href="#sample10">10. 배열 메서드 : find() : 배열 요소 검색하기 : 반환(요소)</a></li>
-        <li><a href="#sample10">10. 배열 메서드 : findIdex() : 배열 첫 요소 검색하기 : 반환(요소)</a></li>
-        <li><a href="#sample11">11. 배열 메서드 : filter() : 조건에 만족하는 배열 요소 검색 : 반환(배열)</a></li>
-        <li><a href="#sample12">12. 배열 메서드 : map() : 배열 요소 추출 새로운 배열로 만들기 : 반환(배열)</a></li>
-        <li><a href="#sample13">13. 배열 메서드 : reduce() : 배열 요소 하나로 만들기 : 반환(결과값)</a></li>
-        <li><a href="#sample13">13. 배열 메서드 : reduceRight() : 배열 요소 하나로 만들기 : 반환(결과값)</a></li>
-        <li><a href="#sample14">14. 배열 메서드 : Array.from() : 배열로 변환 : 반환(배열)</a></li>
+        <li><a href="#sample01">배열 메서드 : length : 배열 길이 구하기 : 반환(숫자)</a></li>
+        <li><a href="#sample02">배열 메서드 : join() : 배열 요소 결합하기 : 반환(문자열)</a></li>
+        <li><a href="#sample03">배열 메서드 : push() : 배열 마지막 요소에 추가하기 : 반환(숫자)</a></li>
+        <li><a href="#sample03">배열 메서드 : unshift() : 배열 첫 요소에 추가하기 : 반환(숫자)</a></li>
+        <li><a href="#sample04">배열 메서드 : shift() : 배열 첫 요소에 삭제하기 : 반환(삭제된 요소)</a></li>
+        <li><a href="#sample04">배열 메서드 : pop() : 배열 마지막 요소에 삭제하기 : 반환(삭제된 요소)</a></li>
+        <li><a href="#sample05">배열 메서드 : indexoF() : 배열 요소 검색하기 : 반환(숫자)</a></li>
+        <li><a href="#sample05">배열 메서드 : lastIndexOf() : 배열 요소 끝에서 검색하기 : 반환(숫자)</a></li>
+        <li><a href="#sample05">배열 메서드 : includes() : 배열 요소 검색하기 : 반환(불린)</a></li>
+        <li><a href="#sample05">배열 메서드 : reverse() : 배열 요소 순서를 반대로 정렬 : 반환(배열)</a></li>
+        <li><a href="#sample05">배열 메서드 : sort() : 배열 요소 검색하기 : 반환(배열)</a></li>
+        <li><a href="#sample05">배열 메서드 : concat() : 배열 요소 결합 : 반환(배열)</a></li>
+        <li><a href="#sample05">배열 메서드 : slice() : 배열 요소 다른 요소로 변경 : 반환(배열)</a></li>
+        <li><a href="#sample05">배열 메서드 : splice() : 배열 요소 다른 요소로 변경 : 반환(배열)</a></li>
+        <li><a href="#sample10">배열 메서드 : find() : 배열 요소 검색하기 : 반환(요소)</a></li>
+        <li><a href="#sample10">배열 메서드 : findIdex() : 배열 첫 요소 검색하기 : 반환(요소)</a></li>
+        <li><a href="#sample11">배열 메서드 : filter() : 조건에 만족하는 배열 요소 검색 : 반환(배열)</a></li>
+        <li><a href="#sample12">배열 메서드 : map() : 배열 요소 추출 새로운 배열로 만들기 : 반환(배열)</a></li>
+        <li><a href="#sample13">배열 메서드 : reduce() : 배열 요소 하나로 만들기 : 반환(결과값)</a></li>
+        <li><a href="#sample13">배열 메서드 : reduceRight() : 배열 요소 하나로 만들기 : 반환(결과값)</a></li>
+        <li><a href="#sample14">배열 메서드 : Array.from() : 배열로 변환 : 반환(배열)</a></li>
         </ol>
     </ul>
 
