--- a/javascript/javascriptRefer07.html
+++ b/javascript/javascriptRefer07.html
@@ -305,18 +305,18 @@
     <h2 class="mt20">날짜 메서드</h2>
     <ul class="list">
         <ol>
-        <li><a href="#sample01">01. 날짜 메서드 : getFullyear() : 연도 불러오기</a></li>
-        <li><a href="#sample02">01. 날짜 메서드 : getMonth() : 월 불러오기</a></li>
-        <li><a href="#sample02">01. 날짜 메서드 : getDate() : 일 불러오기</a></li>
-        <li><a href="#sample02">01. 날짜 메서드 : getHours() : 시간 불러오기</a></li>
-        <li><a href="#sample02">01. 날짜 메서드 : getMinutes() : 분 불러오기</a></li>
-        <li><a href="#sample02">01. 날짜 메서드 : getSeconds() : 초 불러오기</a></li>
-        <li><a href="#sample02">01. 날짜 메서드 : getMilliseconds() : 밀리초 불러오기</a></li>
-        <li><a href="#sample02">01. 날짜 메서드 : getDay() : 요일불러오기</a></li>
-        <li><a href="#sample02">02. 날짜 메서드 : toLocaleString() : 현재 시간을 문자열로 불러오기</a></li>
-        <li><a href="#sample02">02. 날짜 메서드 : toLocaleDateString() : 현재 날짜를 문자열로 불러오기</a></li>
-        <li><a href="#sample02">02. 날짜 메서드 : toLocaleTimeString() : 현재 날짜를 문자열로 불러오기</a></li>
-        <li><a href="#sample03">03. 날짜 메서드 : dat.parse() : 날짜 문자열 타임스탬프 불러오기</a></li>
+        <li><a href="#sample01">날짜 메서드 : getFullyear() : 연도 불러오기</a></li>
+        <li><a href="#sample02">날짜 메서드 : getMonth() : 월 불러오기</a></li>
+        <li><a href="#sample02">날짜 메서드 : getDate() : 일 불러오기</a></li>
+        <li><a href="#sample02">날짜 메서드 : getHours() : 시간 불러오기</a></li>
+        <li><a href="#sample02">날짜 메서드 : getMinutes() : 분 불러오기</a></li>
+        <li><a href="#sample02">날짜 메서드 : getSeconds() : 초 불러오기</a></li>
+        <li><a href="#sample02">날짜 메서드 : getMilliseconds() : 밀리초 불러오기</a></li>
+        <li><a href="#sample02">날짜 메서드 : getDay() : 요일불러오기</a></li>
+        <li><a href="#sample02">날짜 메서드 : toLocaleString() : 현재 시간을 문자열로 불러오기</a></li>
+        <li><a href="#sample02">날짜 메서드 : toLocaleDateString() : 현재 날짜를 문자열로 불러오기</a></li>
+        <li><a href="#sample02">날짜 메서드 : toLocaleTimeString() : 현재 날짜를 문자열로 불러오기</a></li>
+        <li><a href="#sample03">날짜 메서드 : dat.parse() : 날짜 문자열 타임스탬프 불러오기</a></li>
         </ol>
     </ul>
 
