--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
             <div class="row">
                 <div class="span12" style="text-align:center;">
                     <div class="header_tit">
-                        <a href="https://heoar.github.io/dothome21/"><img src="assets/img/main2.svg" alt="main"></a>
+                        <a href="https://heoar.github.io/dothome21/"><img src="class/img/me1.png" alt="main"></a>
                         <h1>Professional web publishers</h1>
                     </div>
                     <div class="header_icon">
