--- a/class/index.html
+++ b/class/index.html
@@ -90,7 +90,7 @@
                 <h2>(디지털컨버전스) [B/L] JAVA기반 스마트웹 개발 전문가 양성_B</h2>
                 <div class="row">
                     <div class="col-xs-6 col-md-3">
-                        <a href="https://youtu.be/zKeK6vtHKvg" class="thumbnail">
+                        <a class="thumbnail">
                             <img src="img/img01.jpg">
                         </a>
                     </div>
