--- a/javascript/javascriptRefer03.html
+++ b/javascript/javascriptRefer03.html
@@ -894,7 +894,7 @@
     <hr>
 
     <div id="sample19" class="sample">
-        <h2>//29. 함수 유형 : 클래스<span class="dot"></span></h2>
+        <h2>29. 함수 유형 : 클래스<span class="dot"></span></h2>
         <div class="code">
     <pre class="line-numbers"><code class="language-js">{
     class study{
