--- a/javascript/javascriptRefer02.html
+++ b/javascript/javascriptRefer02.html
@@ -352,7 +352,11 @@
         <h2>02. 상수 : 데이터 불러오기<span class="dot"></span></h2>
         <div class="code">
             <pre class="line-numbers"><code class="language-js">{
+    const x = 100, y = 200, z = "javascript";
 
+    document.write(x);
+    document.write(y);
+    document.write(z);
 }
 </code></pre>
         </div>
@@ -821,7 +825,13 @@
         //sample2
         //상수 : 데이터 불러오기
         {
-          
+            const x = 100, y = 200, z = "javascript";
+
+            document.write("*** 02. 상수 : 데이터 불러오기 ***");
+
+            document.write(x);
+            document.write(y);
+            document.write(z);
         }
 
         //sample3
