--- a/site/cardType01.html
+++ b/site/cardType01.html
@@ -12,22 +12,54 @@
     <link rel="stylesheet" href="CSS/fonts.css">
     <link rel="stylesheet" href="CSS/reset.css">
     <link rel="stylesheet" href="CSS/common.css">
-    <link rel="stylesheet" href="CSS/style.css">
+   
+    <!-- card type CSS-->
+    <link rel="stylesheet" href="CSS/cardtype.css">
+
+
 </head>
 <body>
-    <section id="cardType">
+    <section id="cardType" class="cardType01">
         <div class="container">
-            <div class="cardType01">
-                <h2>카드 유형1</h2>
-                <p>사이트 제작에서 많이 사용하는 카드 스타일입니다.</p>
-                <div class="card-box">
-                    <div>1</div>
-                    <div>2</div>
-                    <div>3</div>
-                    <div>4</div>
+            <h2>고양이랑 놀자</h2>
+            <p>HARSTORY에 어서오세요 고양이들의 평온한 일상을 담은 공간입니다.</p>
+            <div class="card-wrap">
+                <div class="card">
+                    <a href="#">
+                        <img src="img/card01.jpg" alt="우리 고양이 관련 이미지입니다." class="card-img">
+                    <strong class="card-title">우리 고양이의 건강</strong>
+                    <span class="card-desc">고양이들 몸에도 좋은 것과 나쁜 것이 있습니다. 반려묘를 키운다면 집에 있는 식물, 음식 신경...</span>
+                    <span class="card-keyword">
+                        <span>#고양이</span>
+                        <span>#건강</span>
+                    </span>
+                    </a>
+                </div>
+                <div class="card">
+                    <a href="#">
+                        <img src="img/card02.jpg" alt="고양이 언어 관련 이미지입니다." class="card-img">
+                    <strong class="card-title">고양이의 언어</strong>
+                    <span class="card-desc">동물들 끼리는 보통 소리로 소통하는 경우가 많지만 인간에게는 행동으로 보여줄때가 많습니다...</span>
+                    <span class="card-keyword">
+                        <span>#고양이</span>
+                        <span>#반려묘</span>
+                    </span>
+                    </a>
+                </div>
+                <div class="card">
+                    <a href="#">
+                        <img src="img/card03.jpg" alt="고양이 앨범 관련 이미지입니다." class="card-img">
+                    <strong class="card-title">고양이 앨범</strong>
+                    <span class="card-desc">내가 사랑하는 반려묘의 사진을 공유하고 자랑하며 서로의 생각을 공유해 봅시다.</span>
+                    <span class="card-keyword">
+                        <span>#고양이</span>
+                        <span>#앨범</span>
+                    </span>
+                    </a>
                 </div>
             </div>
         </div>
     </section>
+    <!-- //card type-->
 </body>
 </html>
