--- a/javascript/javascriptRefer02.html
+++ b/javascript/javascriptRefer02.html
@@ -827,11 +827,13 @@
         {
             const x = 100, y = 200, z = "javascript";
 
-            document.write("*** 02. 상수 : 데이터 불러오기 ***");
+            document.write("*** 02. 상수 : 데이터 불러오기 ***<br>");
 
-            document.write(x);
-            document.write(y);
-            document.write(z);
+            document.write(x, "<br>");
+            document.write(y, "<br>");
+            document.write(z, "<br>");
+
+            document.write("<br>");
         }
 
         //sample3
