--- a/javascript/javascriptRefer06.html
+++ b/javascript/javascriptRefer06.html
@@ -534,7 +534,7 @@
     const arr2 = [100, 200, 300, 400, 500];
     
     const text2 = arr2.pop();
-    document.querySelector(".sample04_R2").innerHTML = arr;
+    document.querySelector(".sample04_R2").innerHTML = arr2;
 }
 </code></pre>
         </div>
@@ -1330,7 +1330,7 @@
             document.querySelector(".sample04_Q2").innerHTML = "[100, 200, 300, 400, 500]";
             document.querySelector(".sample04_M2").innerHTML = ".pop()";
             document.querySelector(".sample04_P2").innerHTML = text2;
-            document.querySelector(".sample04_R2").innerHTML = arr;
+            document.querySelector(".sample04_R2").innerHTML = arr2;
 
         }
 
