--- a/javascript/javascriptRefer06.html
+++ b/javascript/javascriptRefer06.html
@@ -543,7 +543,7 @@
     <hr>
 
     <div id="sample05" class="sample">
-        <h2>05. 배열 메서드 : indexoF() / lastIndexOf() : 배열 요소 검색하기 : 반환(숫자)<span class="dot"></span></h2>
+        <h2>05. 배열 메서드 : indexOf() / lastIndexOf() : 배열 요소 검색하기 : 반환(숫자)<span class="dot"></span></h2>
         <div class="code">
             <div class="view">
                 <table>
