--- a/site/cardType.html
+++ b/site/cardType.html
@@ -19,7 +19,7 @@
 
 </head>
 <body>
-    <section class= "cardType">
+    <section id= "cardType">
         <div class="container">
             <div class="cardType01">
                 <h2>고양이랑 놀자</h2>
@@ -66,53 +66,44 @@
 
 
 <!-- card type2-->
-    <section class="cardType">
+    <section id="cardType">
         <div class="container">
             <div class="cardType02">
-                <h2>고양이랑 놀자</h2>
-            <p>HARSTORY에 어서오세요 고양이들의 평온한 일상을 담은 공간입니다.</p>
-            <div class="card-wrap">
-                <div class="card">
-                    <a href="#">
-                    <img src="img/card04.jpg" alt="우리 고양이 관련 이미지입니다." class="card-img">
-                    <strong class="card-title">우리 고양이의 건강</strong>
-                    <span class="card-desc">고양이들 몸에도 좋은 것과 나쁜 것이 있습니다. 반려묘를 키운다면 집에 있는 식물, 음식 등을 신경써야하는데요</span>
-                    <span class="card-word">
-                        <span>SITE</span>
-                    </span>
-                    </a>
-                </div>
-                <div class="card">
-                    <a href="#">
-                    <img src="img/card05.jpg" alt="고양이 언어 관련 이미지입니다." class="card-img">
-                    <strong class="card-title">고양이의 언어</strong>
-                    <span class="card-desc">동물들끼리는 보통 소리로 소통하는 경우가 많지만 인간에게는 행동으로 보여줄때가 많습니다</span>
-                    <span class="card-word">
-                        <span>SITE</span>
-                    </span>
-                    </a>
-                </div>
-                <div class="card">
-                    <a href="#">
-                    <img src="img/card06.jpg" alt="고양이 놀이 관련 이미지입니다." class="card-img">
-                    <strong class="card-title">고양이의 놀이</strong>
-                    <span class="card-desc">고양이도 자신들만의 놀이터가 있다면 무엇을 하며 놀까요? 즐기는 놀이는...</span>
-                    <span class="card-word">
-                        <span>SITE</span>
-                    </span>
-                    </a>
-                </div>
-                <div class="card">
-                    <a href="#">
-                    <img src="img/card07.jpg" alt="고양이 앨범 관련 이미지입니다." class="card-img">
-                    <strong class="card-title">고양이 앨범</strong>
-                    <span class="card-desc">내가 사랑하는 반려묘의 사진을 기록하고 자랑하며 서로의 생각을 공유해 봅시다.</span>
-                    <span class="card-word">
-                        <span>SITE</span>
-                    </span>
-                    </a>
-                </div>
-            </div>
+                <h2>웹스토리보이 강의</h2>
+                <p>웹디자이너, 웹 퍼블리셔, 프론트앤드 개발자를 위한 강의 사이트입니다.</p>
+                <a href="#">
+                    <div class="card-wrap">
+                        <div class="card">
+                            <img src="img/card04.jpg" alt="사진1">
+                            <strong class="title">웹표준 사이트 만들기</strong>
+                            <span class="dec">웹접근성 지침서를 준수하여 만들 사이트입니다. 기본기를 다지기 위한...</span>
+                            <span class="bt">SITE</span>
+                        </div>
+                        <div class="card">
+                            <img src="img/card05.jpg" alt="사진2">
+                            <strong class="title">웹표준 사이트 만들기</strong>
+                            <span class="dec">웹접근성 지침서를 준수하여 만들 사이트입니다. 기본기를 다지기 위한...</span>
+                            <span class="bt">SITE</span>
+                        </div>
+                        <div class="card">
+                            <img src="img/card06.jpg" alt="사진3">
+                            <strong class="title">웹표준 사이트 만들기</strong>
+                            <span class="dec">웹접근성 지침서를 준수하여 만들 사이트입니다. 기본기를 다지기 위한...</span>
+                            <span class="bt">
+                                <span>SITE</span>
+                            </span>
+                            <span class="bt2">
+                                <span>CODING</span>
+                            </span>
+                        </div>
+                        <div class="card">
+                            <img src="img/card07.jpg" alt="사진4">
+                            <strong class="title">웹표준 사이트 만들기</strong>
+                            <span class="dec">웹접근성 지침서를 준수하여 만들 사이트입니다. 기본기를 다지기 위한...</span>
+                            <span class="bt">SITE</span>
+                        </div>
+                    </div>
+                 </a>
             </div>
         </div>
     </section>
