--- a/site/cardType.html
+++ b/site/cardType.html
@@ -108,5 +108,74 @@
         </div>
     </section>
     <!-- //card type2-->
+
+
+    <!-- card type3 -->
+    <section id="cardType">
+        <div class="container">
+            <div class="cardType03">
+                <h2>웹스토리보이 레퍼런스 북</h2>
+                <p>HTML/CSS에 대해서 설명합니다.</p>
+                <p class="red">최신순</p>
+                <p class="bk">인기순</p>
+                <div class="card-wrap">
+                    <a href="#">
+                        <div class="card">
+                            <div class="card-img">
+                            <img src="img/card08.jpg" alt="이미지01">
+                            </div>
+                            <div class="card-box">
+                            <span class="bt1">HTML</span>
+                            <strong class="title">&lt;wbr&gt; 태그는 줄바꿈 할 위치를 정의할 때 사용합니다.</strong>
+                            <span class="dec">&lt;wbr&gt; 태그의 사용은 제한적입니다. 일반적인 한글이나 영어에서는 해당이 되지 않습니다. 의미가 없는 단어나 해석 할 수 없는 단어의 줄바꿈을 할 때 사용합니다. 예를 들면 의미적 전달이 안되는 브라우저의 주소가 가장 적절한 예가 될 것입니다. 단어의 줄바꿈이나 글자의 줄바꿈을 컨트롤 하고 싶다면 word-break 속성을 사용합니다.</span>
+                            <span class="w">
+                                <span><br>2021.04.03</span>
+                            </span>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="card-img">
+                            <img src="img/card09.jpg" alt="이미지02">
+                            </div>
+                            <div class="card-box">
+                            <span class="bt2">CSS</span>
+                            <strong class="title">&lt;aside&gt; 태그는 주요 콘텐츠의 보조적 컨텐츠 섹션을 설정합니다.</strong>
+                            <span class="dec">&lt;aside&gt; 태그는 주요 콘텐츠의 보조적 컨텐츠 섹션을 설정합니다. 웹 페이지의 메인 콘텐츠와 관련된 사이드의 정보, 광고 등 부분적인 정보를 나타낼 때 사용합니다. &lt;aside&gt; 태그는 주요 콘텐츠의 보조적 컨텐츠 섹션을 설정합니다. &lt;aside&gt; 태그는 웹 페이지의 메인 콘텐츠와 관련된 사이드의 정보, 광고 등 부분적인 정보를 나타낼 때 사용합니다.</span>
+                            <span class="w">
+                                <span><br>2021.04.03</span>
+                            </span>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="card-img">
+                            <img src="img/card10.jpg" alt="이미지03">
+                            </div>
+                            <div class="card-box">
+                            <span class="bt3">JAVASCRIPT</span>
+                            <strong class="title">&lt;article&gt; 태그는 사이트의 독립적인 컨텐츠 섹션을 설정합니다.</strong>
+                            <span class="dec">&lt;article&gt; 태그는 사이트의 독립적인 컨텐츠 섹션을 설정합니다. 독립적인 컨텐츠에는 포럼, 신문기사, 잡지, 블러그 항목, 게시판 글 등이 있으며, 각각의 컨테츠에는 제목(&lt;h1&gt;~&lt;h6&gt;)이 표시되어야 합니다. &lt;article&gt; 태그는 사이트의 독립적인 컨텐츠 섹션을 설정합니다. &lt;article&gt; 태그는 포럼, 신문기사, 잡지, 블러그 항목, 게시판 글 등 콘텐츠의 독립적인 항목을 나타냅니다.</span>
+                            <span class="w">
+                                <span><br>2021.04.03</span>
+                            </div>
+                            </span>
+                        </div>
+                        <div class="card">
+                            <div class="card-img">
+                            <img src="img/card11.jpg" alt="이미지04">
+                            </div>
+                            <div class="card-box">
+                            <span class="bt4">JQUERY</span>
+                            <strong class="title">&lt;abbr&gt; 태그는 줄임말이나 머리글자를 표현하는데 사용합니다</strong>
+                            <span class="dec">abbr은 abbreviation의 약자로, "약자 또는 생략어"라는 의미를 가집니다. title 속성을 사용하여 전체 단어를 지정 할 수 있으며, &lt;dfn&gt; 태그와 같이 사용하여 정의할 수 있습니다.</span>
+                            <span class="w">
+                                <span><br><br>2021.04.03</span>
+                            </span>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
