--- a/site/cardType.html
+++ b/site/cardType.html
@@ -12,6 +12,9 @@
     <link rel="stylesheet" href="CSS/fonts.css">
     <link rel="stylesheet" href="CSS/reset.css">
     <link rel="stylesheet" href="CSS/common.css">
+    
+    <!-- 나눔 스퀘어 폰트-->
+    <link rel="stylesheet" type="text/css" href="https://cdn.rawgit.com/moonspam/NanumSquare/master/nanumsquare.css">
    
     <!-- card type CSS-->
     <link rel="stylesheet" href="CSS/cardtype.css">
