--- a/javascript/javascriptRefer12.html
+++ b/javascript/javascriptRefer12.html
@@ -286,7 +286,7 @@
     <h2 class="mt20">날짜 샘플</h2>
     <ul>
         <ol>
-        <li><a href="javascript604-1.html">01. 시계 만들기</a><a href="javascript604.html">getHours()</a></li>
+        <li><a href="javascriptSample04.html">01. 시계 만들기</a><a href="javascript604.html">getHours()</a></li>
         </ol>
     </ul>
 
