--- a/refer-css/index.html
+++ b/refer-css/index.html
@@ -149,9 +149,9 @@
             list-style: none;
         }
 
-        .page li a a {
+        .page li a {
             color: #222;
-            text-decoration: 
+            text-decoration: none;
         }
 
         .page li a:hover {
