20210823이미지타입
업로드

--- a/site/cardType.html
+++ b/site/cardType.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="웹 사이트 제작을 위한 정보 사이트입니다.">
     <meta name="keywords" content="웹이야기, 사이트, 웹퍼블리셔">
-    <title>CardType01</title>
+    <title>카드타입</title>
 
     <!-- CSS -->
     <link rel="stylesheet" href="CSS/fonts.css">
