--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
 
                     <!-- box -->
                     <section class="color-shape script">
-                        <a href="javascript/index.html" target="_blank">
+                        <a href="refer-javascript/index.html" target="_blank">
                             <div class="image-wrap">
                                 <div class="hover-wrap">
                                     <span class="overlay-img-donut">JAVASCRIPT</span>
@@ -225,6 +225,26 @@
                     </section>
                     <!-- //box -->
 
+                     <!-- box -->
+                     <section class="color-shape script">
+                        <a href="refer-jquery/index.html" target="_blank">
+                            <div class="image-wrap">
+                                <div class="hover-wrap">
+                                    <span class="overlay-img-donut">Jquery</span>
+                                    <span class="overlay-text-thumb-donut">제이쿼리</span>
+                                    <span class="overlay-text-thumb1-donut">제이쿼리</span>
+                                    <span class="overlay-text-thumb2-donut">Jquery</span>
+                                </div>
+                                <img src="assets/img/svg-cheeseburger.svg" alt="portfolio">
+                                <div class="img-text donutImg">
+                                    <h5>Jquery</h5>
+                                    <p>제이쿼리</p>
+                                    <span>Jquery</span>
+                                </div>
+                            </div>
+                        </a>
+                    </section>
+                    <!-- //box -->
 
                      <!-- box -->
                      <section class="color-shape site">
@@ -291,7 +311,7 @@
 
                     <!-- box -->
                     <section class="color-shape reference">
-                        <a href="wireframe/cardType01.html" target="_blank">
+                        <a href="site/cardType.html" target="_blank">
                             <div class="image-wrap">
                                 <div class="hover-wrap">
                                     <span class="overlay-img-donut">wireframe</span>
