--- a/refer-css/index2.html
+++ b/refer-css/index2.html
@@ -202,10 +202,194 @@
             <h3><a href="index.html">Alphabet</a></h3>
             <h3  class="active"><a href="index2.html">Topics</a></h3>
             <ul class="link">
-                <li><a href="#sample01">aimation</a></li>
-                <li><a href="#sample02">background</a></li>
-                <li><a href="#sample02">box</a></li>
+                <li><a href="#sample01">기본 선택자</a></li>
+                <li><a href="#sample02">계층 선택자</a></li>
+                <li><a href="#sample03">속성 선택자</a></li>
+                <li><a href="#sample04">가상 요소</a></li>
+                <li><a href="#sample05">가상 클래스</a></li>
+                <li><a href="#sample06">링크 가상 클래스</a></li>
+                <li><a href="#sample07">폼 선택자</a></li>
             </ul>
+            <ul class="link">
+                <li><a href="#sample08">aimation</a></li>
+                <li><a href="#sample09">background</a></li>
+                <li><a href="#sample10">box</a></li>
+            </ul>
+
+            <!-- sample01 -->
+            <table>
+                <colgroup>
+                    <col style="width: 15%">
+                    <col style="width: 30%">
+                    <col style="width: 70%">
+                </colgroup>
+                <thead>
+                    <tr>
+                        <th>종류</th>
+                        <th>속성</th>
+                        <th>설명</th>
+                    </tr>
+                </thead>
+            <h4>기본 선택자</h4>
+            <div id="sample01">
+                <tbody>
+                    <tr>
+                        <th>태그 선택자</th>
+                        <td>p {color:#fff;}</td>
+                        <td>p 태그를 선택하여 글씨 색을 하얀색으로 변경합니다.</td>
+                    </tr>
+                    <tr>
+                        <th>클래스 선택자</th>
+                        <td>.class {color:#fff;}</td>
+                        <td>클래스(class)를 선택하여 글씨 색을 하얀색으로 변경합니다.</td>
+                    </tr>
+                    <tr>
+                        <th>아이디 선택자</th>
+                        <td>#id {color:#fff;}</td>
+                        <td>아이디(id)를 선택하여 글씨 색을 하얀색으로 변경합니다.</td>
+                    </tr>
+                    <tr>
+                        <th>그룹 선택자</th>
+                        <td>p, div {color:#fff;}</td>
+                        <td>p태그, div태그를 선택하여 글씨 색을 하얀색으로 변경합니다.</td>
+                    </tr>
+                    <tr>
+                        <th>전체 선택자</th>
+                        <td>* {color:#fff;}</td>
+                        <td>전체 태그를 선택하여 글씨 색을 하얀색으로 변경합니다.</td>
+                    </tr>
+                </tbody>
+            </div>
+            </table>
+            <!-- //sample01 -->
+
+
+            <!-- sample01 -->
+            <table>
+                <colgroup>
+                    <col style="width: 15%">
+                    <col style="width: 30%">
+                    <col style="width: 70%">
+                </colgroup>
+                <thead>
+                    <tr>
+                        <th>종류</th>
+                        <th>속성</th>
+                        <th>설명</th>
+                    </tr>
+                </thead>
+            <h4>계층 선택자</h4>
+            <div id="sample02">
+                <tbody>
+                    <tr>
+                        <th>하위 선택자(Descendant Selector)</th>
+                        <td>div p {color:#fff;}</td>
+                        <td>div 태그 안의 자식 중 p태그를 모두 선택하여 글씨 색을 하얀색으로 변경합니다.</td>
+                    </tr>
+                    <tr>
+                        <th>자식 선택자(Child Selector)</th>
+                        <td>div > p {color:#fff;}</td>
+                        <td>div 태그 안의 자식 중 첫번째 p태그를 선택하여 글씨 색을 하얀색으로 변경합니다.</td>
+                    </tr>
+                    <tr>
+                        <th>형제 선택자(sibling Selector)</th>
+                        <td>div ~ p {color:#fff;}</td>
+                        <td>div 태그에 인접한 형제 p태그를 모두 선택하여 글씨 색을 하얀색으로 변경합니다.</td>
+                    </tr>
+                    <tr>
+                        <th>인접 형제 선택자</th>
+                        <td>div + p {color:#fff;}</td>
+                        <td>div 태그에 인접한 형제 중 첫번째 p태그를 선택하여 글씨 색을 하얀색으로 변경합니다.</td>
+                    </tr>
+                </tbody>
+            </div>
+            </table>
+            <!-- //sample02 -->
+
+
+            <!-- sample03 -->
+            <table>
+                <colgroup>
+                    <col style="width: 15%">
+                    <col style="width: 30%">
+                    <col style="width: 70%">
+                </colgroup>
+                <thead>
+                    <tr>
+                        <th>종류</th>
+                        <th>속성</th>
+                        <th>설명</th>
+                    </tr>
+                </thead>
+            <h4>속성 선택자</h4>
+            <div id="sample03">
+                <tbody>
+                    <tr>
+                        <th>[name]</th>
+                        <td>a[href]</td>
+                        <td>a 태그 속성 중에 href가 있으면 선택합니다.</td>
+                    </tr>
+                    <tr>
+                        <th>[name="value"]</th>
+                        <td>a[href="#header"]</td>
+                        <td>a 태그 href 속성의 값이 '#header'이면 선택합니다.</td>
+                    </tr>
+                    <tr>
+                        <th>[name~="value"]</th>
+                        <td>a[href~="web"]</td>
+                        <td>a 태그 href 속성의 값이 'web'을 포함한 요소를 선택합니다.</td>
+                    </tr>
+                    <tr>
+                        <th>[name^="value"]</th>
+                        <td>a[href^="web"]</td>
+                        <td>a 태그 href 속성의 값이 'web'으로 시작하는 태그를 선택합니다.</td>
+                    </tr>
+                    <tr>
+                        <th>[name*="value"]</th>
+                        <td>a[href*="web"]</td>
+                        <td>a 태그 href 속성의 값이 'web'이 포함되어 있는 태그를 선택합니다.</td>
+                    </tr>
+                    <tr>
+                        <th>[name$="value"]</th>
+                        <td>a[href$="com"]</td>
+                        <td>a 태그 href 속성의 값이 'com'으로 끝나는 태그를 선택합니다.</td>
+                    </tr>
+                </tbody>
+            </div>
+            </table>
+            <!-- //sample03 -->
+
+
+             <!-- sample04 -->
+             <table>
+                <colgroup>
+                    <col style="width: 15%">
+                    <col style="width: 30%">
+                    <col style="width: 70%">
+                </colgroup>
+                <thead>
+                    <tr>
+                        <th>종류</th>
+                        <th>속성</th>
+                        <th>설명</th>
+                    </tr>
+                </thead>
+            <h4>가상 요소</h4>
+            <div id="sample04">
+                <tbody>
+                    <tr>
+                        <th>-</th>
+                        <td>-</td>
+                        <td>-</td>
+                    </tr>
+                 
+                </tbody>
+            </div>
+            </table>
+            <!-- //sample04 -->
+
+
+            <!-- sample08 -->
             <table>
                 <colgroup>
                     <col style="width: 15%">
@@ -220,7 +404,7 @@
                     </tr>
                 </thead>
             <h4>애니메이션</h4>
-            <div id="sample01">
+            <div id="sample08">
                 <tbody>
                     <tr>
                         <th rowspan="5">변형</th>
@@ -296,7 +480,10 @@
                 </tbody>
             </div>
             </table>
-                <!-- sample02 -->
+            <!-- //sample08 -->
+
+
+            <!-- sample09 -->
             <table>
                 <colgroup>
                     <col style="width: 15%">
@@ -311,7 +498,7 @@
                     </tr>
                 </thead>
                 <h4>백그라운드</h4>
-                <div id="sample02">
+                <div id="sample09">
                     <tbody>
                             <th rowspan="11">백그라운드</th>
                             <tr>
@@ -357,7 +544,10 @@
                     </tbody>
                 </div>
                 </table>
-                    <!-- //sample02 -->
+                <!-- //sample09 -->
+
+
+                <!-- sample10 -->
                 <table>
                     <colgroup>
                         <col style="width: 15%">
@@ -372,7 +562,7 @@
                         </tr>
                     </thead>
                 <h4>박스 모델</h4>
-                <div id="sample03">
+                <div id="sample10">
                     <tbody>
                         <tr>
                             <th rowspan="6">위치</th>
