--- a/site/imgType.html
+++ b/site/imgType.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="CSS/reset.css">
     <link rel="stylesheet" href="CSS/common.css">
     <link rel="stylesheet" href="CSS/imgtype.css">
+    
+    <link rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Crimson+Pro">
     <title>이미지 카드타입</title>
 </head>
 <body>
@@ -33,6 +36,39 @@
                                 <span class="card-bt">자세히 보기</span>
                             </div>
                     </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="imgtype">
+        <div class="container">
+            <div class="imgtype02">
+                <h2 class="h2-1">I am
+                    <h2 class="h2-2">‘ 패셔니스타 ’</h2>
+                </h2>
+                <div class="card-wrap">
+                    <div class="card">
+                        <a href="#"></a>
+                        <img src="img/imgtype03.jpg" alt="이미지03" class="img03">
+                        <div class="txt-box01">
+                            <div class="tlite">트렌드 패션</div>
+                        </div>
+                        <div class="card">
+                            <a href="#"></a>
+                            <img src="img/imgtype04.jpg" alt="이미지04" class="img04">
+                            <div class="txt-box02">
+                                <div class="tlite">계절 패션</div>
+                                <span class="card-bt">자세히 보기</span>
+                            </div>
+                    </div>
+                    <div class="card">
+                        <a href="#"></a>
+                        <img src="img/imgtype05.jpg" alt="이미지05" class="img05">
+                        <div class="txt-box03">
+                            <div class="tlite">악세사리</div>
+                        </div>
+                </div>
                 </div>
             </div>
         </div>
